--- a/suporte7601.html
+++ b/suporte7601.html
@@ -68,7 +68,7 @@
                     <li><i class="icon-phone-sign" title="(15)98138-4477"><a href="https://wa.me/5515981384477?text=Olá%20Digite%20Sua%20Mensagem%20Aqui" data-toogle="tooltip"  title="(15)98138-4477">&nbspWhatsApp</a></i></li>
                     <li><i class="icon-share-alt" title="thiago.stdio@gmail.com"><a href="mailto:thiago.stdio@gmail.com?Subject=Título%20da%20mensagem" title="thiago.stdio@gmail.com">&nbspEmail</a></i></li>
                     <li><i class="icon-mobile-phone" title="(15)98138-4477"><a href="tel:15981384477" title="(15)98138-4477">&nbspTelefone</a></i></li>
-                    <li><i class="icon-laptop" title="Index"><a href="/index.html" title="Index">&nbspHome</a></i></li>
+                    <li><i class="icon-laptop" title="Index"><a href="index.html" title="Index">&nbspHome</a></i></li>
                     <li><i class="icon-eye-open" title="Suporte"><a href="suporte.html" title="Suporte">&nbspSuporte</a></i></li>
                     <li><i class="icon-coffee" title="Sysadmin"><a href="https://github.com/login" title="Sysadmin">&nbspLogin</a></i></li>
                 
