Correção induzida / Icone real

--- a/suporte.html
+++ b/suporte.html
@@ -82,7 +82,7 @@
 
         <div class="input">
         <input  type="checkbox" id="check">
-            <label id="icone" for="check"><img src="assets/logo.png"></label>
+            <label id="icone" for="check"><img src="assets/icone.png"></label>
                 <div  class="barra">
                     <nav>
                         <div class="link"> <i class="icon-home"></i> <a href="index.html">&nbspInício</a></div>
