Update png quebradas

--- a/suporte.html
+++ b/suporte.html
@@ -118,7 +118,7 @@
 
             <div class="section-header">
                 <h2>Soluções</h2>
-                <img src="/assets/error.png">
+                <img src="assets/error.png">
                 <pre><h5>Solução - Erro Compilador 7601</h5></pre>
                 <p>Backup e suporte 24 Horas.  
                 <br><a href="suporte7601.html"><h8>[ver mais]</h8></a>
@@ -128,7 +128,7 @@
 
             <div class="section-header">
                 <h2>Manuais</h2>
-                <img src="/assets/Codesys_Logo.png">
+                <img src="assets/Codesys_Logo.png">
                 <pre><h5>Instalar - CodeSys </h5></pre>
                 <p>Como instalar o CodeSys sem erro.
                 <br><a href="suporteCodeSys.html"><h8>[ver mais]</h8></a>
