Testing add word

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ X-Fastly-Request-ID: b831be29828a47c2a0622d913058574f861a546a
             <div class="site-section-inside"><!-- Container -->
 
                 <div class="section-header"><!-- Titulo index -->
-                    <a name="catalago"><h2>catalago</h2>
+                    <a name="catalago"><h2>catalago digital</h2>
                 </div>
 
                 <!-- Divs do Catalago -->
