--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ X-Fastly-Request-ID: b831be29828a47c2a0622d913058574f861a546a
                 <div class="feature-box">
                     <img src="assets/logo.png" alt="404">
                     <h5>Software para iOS & Android</h5>
-                    <p>Desenvolvo softwares para celulares {iOS & Android}, ao rigor do Alto e baixo nivel de programação para quaisquer finalidade.<a href="https://wa.me/5515981748893?text=Olá%20Digite%20Sua%20Mensagem%20Aqui"><h8>[ver mais]</h8></a></p>
+                    <p>Desenvolvo softwares para celulares {iOS & Android}, ao rigor do alto e baixo nivel de programação para quaisquer finalidade.<a href="https://wa.me/5515981748893?text=Olá%20Digite%20Sua%20Mensagem%20Aqui"><h8>[ver mais]</h8></a></p>
                 </div>
 
                 <div class="feature-box">
