--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ X-Fastly-Request-ID: b831be29828a47c2a0622d913058574f861a546a
                 <div class="feature-box">
                     <img src="assets/logo.png" alt="404">
                     <h5>Sistemas</h5>
-                    <p>Desenvolvimento de sistemas de controle do software p/ qualquer objetivo.<a href="https://wa.me/5515981748893?text=Olá%20Digite%20Sua%20Mensagem%20Aqui" ><h8>[ver mais]</h8></a></p>
+                    <p>Desenvolvimento de sistemas para qualquer objetivo.<a href="https://wa.me/5515981748893?text=Olá%20Digite%20Sua%20Mensagem%20Aqui" ><h8>[ver mais]</h8></a></p>
                 </div>
 
                 <div class="feature-box"><a name="Meca">
