--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body oncopy="return false" oncut="return false" onpaste="return false"><!---Disable copy--> 
 
 <!-- GET-REQUEST
-SySAdmin: Thiago Carvalho Martins (15)98138-4477
+SySAdmin: Thiago Carvalho Martins (15)98174-8893
 Connection: keep-alive
 Content-Length: 1713
 Server: GitHub.com
@@ -228,7 +228,7 @@ X-Fastly-Request-ID: b831be29828a47c2a0622d913058574f861a546a
 
 <footer class="footerio">
     <img src="https://avatars0.githubusercontent.com/u/43300353?s=460&u=ba9954dccd5918b478cb783bd40d8b589019adb9&v=4" alt="Footer Logo">
-    <h2><a lign="center" href="https://www.linkedin.com/in/thiago-c-621365175/" name="LinkedIn">Thiago Martins.</h2><br>
+    <h2><a lign="center" href="https://thiagostdio.github.io/portifolio/" name="Portifólio">Thiago Martins.</h2><br>
     <h6>Técnico em Mecatrônica [IFSP] & [CPS] em Desenvolvimento de Software. </h6>
     <h8>Sorocaba - SP Jardim São Guilherme </h7>
 </footer>
