--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ X-Fastly-Request-ID: b831be29828a47c2a0622d913058574f861a546a
                         <div class="link"> <i class="icon-phone-sign"></i> <a href="https://wa.me/5515981748893?text=Olá%20Digite%20Sua%20Mensagem%20Aqui">&nbspWhatsApp</a></div>
                         <div class="link"> <i class="icon-envelope-alt"></i> <a href="mailto:thiago.stdio@gmail.com?Subject=Título%20da%20mensagem">&nbspEmail</a></div>
                         <div class="link"> <i class="icon-phone-sign"></i> <a href="tel:15981748893">&nbspTelefone</a></div>
-                        <div class="link"> <i class="icon-folder-close-alt"></i> <a href="#catalago">&nbspCatalago</a></div>
+                        <div class="link"> <i class="icon-folder-close-alt"></i> <a href="#Catalogo">&nbspCatalogo</a></div>
                         <div class="clear"></div>
                     </nav>
                 </div>
@@ -149,10 +149,10 @@ X-Fastly-Request-ID: b831be29828a47c2a0622d913058574f861a546a
             <div class="site-section-inside"><!-- Container -->
 
                 <div class="section-header"><!-- Titulo index -->
-                    <a name="catalago"><h2>catalago digital</h2>
+                    <a name="catalogo"><h2>catalogo digital</h2>
                 </div>
 
-                <!-- Divs do Catalago -->
+                <!-- Divs do catalogo -->
 
                 <div class="feature-box"><a name="DS">
                     <img src="assets/logo.png" alt="404">
