--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta property="og:description" content="Eu forneço serviços sobre as tecnologias da Web aberta, incluindo serviços e produtos.">
     <meta property="og:title" content="Thiago Martins">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://avatars0.githubusercontent.com/u/43300353?s=460&u=ba9954dccd5918b478cb783bd40d8b589019adb9&v=4">
+    <meta property="og:image" content="https://raw.githubusercontent.com/ThiagoStdio/ThiagoStdio/master/assets/Card.png">
     <meta property="og:site_name" content="Thiago Martins">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:image" content="https://avatars0.githubusercontent.com/u/43300353?s=460&u=ba9954dccd5918b478cb783bd40d8b589019adb9&v=4"">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/ThiagoStdio/ThiagoStdio/master/assets/Card.png"">
     <!--Style/Bootstrap-->
     <link rel="shortcut icon" href="assets/favicon/favicon.ico" />
     <link href="index.css" rel="stylesheet" type="text/css">
