--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <script>
         document.addEventListener('contextmenu', event => event.preventDefault());
     </script><!---Not Recommended--> 
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/d588bd3ceda19873dd61fda1a/5323ee270e28304e27dbcc1c4.js");</script>                                                                                                                                             
+                                                                                                                                              
 
 
     
