Add email marketing

--- a/index.html
+++ b/index.html
@@ -223,6 +223,23 @@ X-Fastly-Request-ID: b831be29828a47c2a0622d913058574f861a546a
                     <div class="center"><h5>Sorocaba</h5><h5><p> São Paulo</h5><div>
                     <div class="canvas" style="text-align:center"><iframe src="https://www.google.com/maps/embed?pb=!4v1596684594069!6m8!1m7!1sC1y6qdHCYTXUSxL1mZSHWA!2m2!1d-23.44589917072232!2d-47.49046901866264!3f77.06449155524146!4f19.960466021926635!5f0.7820865974627469" width="400" height="250" frameborder="0"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
                 </div>
+                
+                <div>
+                    <!-- Marketing Email -->
+                    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                    <style type="text/css">
+                        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+                    </style>
+                    <div id="mc_embed_signup">
+                    <form action="https://github.us2.list-manage.com/subscribe/post?u=d588bd3ceda19873dd61fda1a&amp;id=7359842b9e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                        <label for="mce-EMAIL">Solicite Seu Orçamento</label>
+                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Digite seu e-mail" required>
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d588bd3ceda19873dd61fda1a_7359842b9e" tabindex="-1" value=""></div>
+                        <div class="clear"><input type="submit" value="Enviar" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                        </div>
+                    </form>
+                </div>
     </main>
 
 
