--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <script>
         document.addEventListener('contextmenu', event => event.preventDefault());
     </script><!---Not Recommended--> 
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/d588bd3ceda19873dd61fda1a/5323ee270e28304e27dbcc1c4.js");</script>                                                                                                                                             
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/d588bd3ceda19873dd61fda1a/5323ee270e28304e27dbcc1c4.js");</script><!-- Assinatura--->                                                                                                                                             
                                                                                                                                               
 
 
@@ -225,20 +225,24 @@ X-Fastly-Request-ID: b831be29828a47c2a0622d913058574f861a546a
                 </div>
                 
                 <div>
-                    <!-- Marketing Email -->
+                    <!-- Email Marketing -->
+                    <div class="feature-box">
                     <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
                     <style type="text/css">
                         #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+                        #{}
                     </style>
-                    <div id="mc_embed_signup">
-                    <form action="https://github.us2.list-manage.com/subscribe/post?u=d588bd3ceda19873dd61fda1a&amp;id=7359842b9e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                        <div id="mc_embed_signup_scroll">
-                        <label for="mce-EMAIL">Solicite Seu Orçamento</label>
-                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Digite seu e-mail" required>
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d588bd3ceda19873dd61fda1a_7359842b9e" tabindex="-1" value=""></div>
-                        <div class="clear"><input type="submit" value="Enviar" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                        <div id="mc_embed_signup">
+                        <form action="https://github.us2.list-manage.com/subscribe/post?u=d588bd3ceda19873dd61fda1a&amp;id=7359842b9e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                            <div id="mc_embed_signup_scroll">
+                            <h5><label for="mce-EMAIL">Solicite Seu Orçamento</label>
+                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Digite seu e-mail" required>
+                            <div style="position: absolute; left: -5000px; margin-top: -100px; " aria-hidden="true"><input type="text" name="b_d588bd3ceda19873dd61fda1a_7359842b9e" tabindex="-1" value=""></div>
+                            <div class="center" style="position: relative; "><input type="submit" value="Enviar" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                            </div></br>
+                        </form>
                         </div>
-                    </form>
+                    </div>
                 </div>
     </main>
 
