--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     
 
 <title class="title">Thiago Martins</title><!---CEO SYSADMIN--> 
-
+<script data-ad-client="ca-pub-2429810927426036" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body oncopy="return false" oncut="return false" onpaste="return false"><!---Disable copy--> 
 
