--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ X-Fastly-Request-ID: b831be29828a47c2a0622d913058574f861a546a
                 <li><i class="icon-phone-sign" title="(15) 98174-8893"><a href="https://wa.me/5515981748893?text=Olá%20Digite%20Sua%20Mensagem%20Aqui" data-toogle="tooltip"  title="(15)98138-4477">&nbspWhatsApp</a></i></li>
                 <li><i class="icon-share-alt" title="thiago.stdio@gmail.com"><a href="mailto:thiago.stdio@gmail.com?Subject=Título%20da%20mensagem" title="thiago.stdio@gmail.com">&nbspEmail</a></i></li>
                 <li><i class="icon-mobile-phone" title="(15) 98174-8893"><a href="tel:15981748893" title="(15) 98174-8893">&nbspTelefone</a></i></li>
-                <li><i class="icon-laptop" title="Index"><a href="https://thiagostdio.github.io/Index/" title="Index">&nbspHome</a></i></li>
+                <li><i class="icon-laptop" title="Index"><a href="https://thiagostdio.github.io/Catalogo_Geral/#DS" title="Index">&nbspHome</a></i></li>
                 <li><i class="icon-eye-open" title="Suporte"><a href="suporte.html" title="Suporte">&nbspSuporte</a></i></li>
                 <li><i class="icon-leaf" title="Softwares"><a href="#DS" title="Softwares">&nbspDesenvolvimento de Sistemas</a></i></li>
                 <li><i class="icon-cogs" title="Mecânica e Eletroeletrônica"><a href="#Meca" title="Mecânica e Eletroeletrônica">&nbspMecatrônica</a></i></li>
@@ -251,7 +251,7 @@ X-Fastly-Request-ID: b831be29828a47c2a0622d913058574f861a546a
 
 <footer class="footerio">
     <img src="https://avatars0.githubusercontent.com/u/43300353?s=460&u=ba9954dccd5918b478cb783bd40d8b589019adb9&v=4" alt="Footer Logo">
-    <h2><a lign="center" href="https://thiagostdio.github.io/portifolio/" name="Portifólio">Thiago Martins.</h2><br>
+    <h2><a lign="center" href="http://www.stdiocomunicacao.tk/" name="Portifólio">Thiago Martins.</h2><br>
     <h6>Técnico em Mecatrônica [IFSP] & [CPS] em Desenvolvimento de Software. </h6>
     <h8>Sorocaba - SP Jardim São Guilherme </h7>
 </footer>
